--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,11 @@
 	"require": {
 		"craftcms/ckeditor": "4.9.0",
 		"craftcms/cms": "5.7.10",
+		"craftcms/feed-me": "6.8.0",
 		"ether/seo": "5.0.0",
 		"mmikkel/cp-field-inspect": "2.0.4",
 		"nystudio107/craft-vite": "5.0.1",
+		"studioespresso/craft-mollie-payments": "5.2.4",
 		"vlucas/phpdotenv": "^5.4.0"
 	},
 	"require-dev": {
