--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"vite-plugin-restart": "^0.4.2"
 	},
 	"dependencies": {
-		"alpinejs": "^3.14.9"
+		"alpinejs": "^3.14.9",
+		"date-fns": "^4.1.0"
 	}
 }
